# deerflow-harness

./: .gitignore  README.md  pyproject.toml
archive/a00-overview/: README.md  pyproject.toml
archive/a00-overview/tests/: test_a00_placeholder.py
archive/a01-state-graph/: README.md  pyproject.toml
archive/a01-state-graph/src/deerflow_harness/: thread_state.py
archive/a01-state-graph/tests/: test_a01.py
archive/a02-lead-agent/: README.md  pyproject.toml
archive/a02-lead-agent/docs/: 02-lead-agent.md
archive/a02-lead-agent/src/deerflow_harness/: __init__.py  lead_agent.py
archive/a02-lead-agent/tests/: test_a01.py
docs/: 00-overview.md  01-state-graph.md  SERIES-MAP.md
src/deerflow_harness/: __init__.py  features.py  lead_agent.py  middlewares.py
tests/: test_a02.py
