[project]
name = "deerflow-harness"
version = "0.1.0"
description = "从零搭一个 LangGraph agent harness —— 系列 16 篇配套代码与测试"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deerflow_harness"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "live: tests that call a real LLM endpoint (skipped without credentials)",
]